istio-DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapp
spec:
  host: webapp
  subsets:
  - name: blue
    labels:
      version: blue
  - name: red
    labels:
      version: red
