istio-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
  - "*"
  gateways:
  - webapp-gateway
  http:
    - route:
      - destination:
          host: webapp
          subset: blue
        weight: 50
      - destination:
          host: webapp
          subset: red
        weight: 50
